# tgBot_img_to_text

./: .dockerignore  Dockerfile  README.md  copy_123.py  pyproject.toml  requirements.txt
img_to_text/: main.py
